--- a/src/scss/Home/Home.scss
+++ b/src/scss/Home/Home.scss
@@ -137,6 +137,7 @@
   }
   .section-main__item:first-child {
     margin-bottom: 75px;
+    margin-top: -80px;
   }
 }
 @media screen and (min-width: 500px) and (max-width: 768px) {
@@ -165,6 +166,7 @@
   }
   .section-main__item:first-child {
     margin-bottom: 75px;
+    margin-top: -80px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
